--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,15 +4,15 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="ums_device_tip">select a block device or an image file </string>
-    <string name="ums_config_path_tip">select the config base path( like \'android_usb/android0\')</string>
+    <string name="ums_device_tip">data source(a block device or an image file)</string>
+    <string name="ums_config_path_tip">config path</string>
     <string name="ums_edit_hint">input or click the button to select</string>
     <string name="ums_select_btn_tip">select</string>
     <string name="ums_history_btn_tip">history</string>
     <string name="ums_search_btn_tip">search</string>
     <string name="ums_readonly_check_tip">readonly</string>
     <string name="ums_config_btn_tip">config usb gadget</string>
-    <string name="mount_target_edit_tip">select the directory where to mount</string>
+    <string name="mount_target_edit_tip">mount point (directory where to mount)</string>
     <string name="mount_loop_check_tip">loop</string>
     <string name="mount_mount_tip">mount</string>
     <string name="explorer_sort_way">sort way</string>
@@ -62,6 +62,16 @@
     <string name="select_loop_tip">The file you select doesn\'t like a block device, but \'loop\' is not selected.Select \'loop\'?</string>
     <string name="new_image_success_tip">Create image file success!Do you want to set the image as mass storage device?</string>
     <string name="tip">tip</string>
+    <string name="read">read</string>
+    <string name="write">write</string>
+    <string name="execute">execute</string>
+    <string name="user">user</string>
+    <string name="group">group</string>
+    <string name="other">other</string>
+    <string name="permission_tip"><![CDATA[dmask & fmask (needed by vfat file system)]]></string>
+    <string name="mount_namespace_tip">if \'mount namespace separation\' in SuperSu is checked,this function may be impeded</string>
+    <string name="charset_tip">eliminate garbled</string>
+    <string name="status">status</string>
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
     <!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
