--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,22 @@
     <string name="mount_namespace_tip">if \'mount namespace separation\' in SuperSu is checked,this function may be impeded</string>
     <string name="charset_tip">eliminate garbled</string>
     <string name="status">status</string>
+    <string name="umsdev">It\'s a block device please  operate carefully !</string>
+    <string name="reportfail">fail to create report</string>
+    <string name="reportok">Done ,you can send it with your problems to \'outofmemo@qq.com\' .It\'s located in</string>
+    <string name="create_report">create device report</string>
+    <string name="quick_config">one key start</string>
+    <string name="usb_connection">usb conncetion</string>
+    <string name="quick_create">quick create</string>
+    <string name="image_size">image size</string>
+    <string name="create">create</string>
+    <string name="history">history</string>
+    <string name="using">using</string>
+    <string name="local_mount">local mount</string>
+    <string name="start">start</string>
+    <string name="close">close</string>
+    <string name="end">end</string>
+    <string name="no_using">nothing in use</string>
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
     <!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
