--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -115,6 +115,9 @@
     <string name="fail">失败</string>
     <string name="success">成功</string>
     <string name="log_wait">正在导出,请稍等...</string>
+    <string name="open_as">打开为</string>
+    <string name="open_explorer">打开文件浏览器</string>
+    <string name="exit">退出</string>
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
 	<!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
