--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -113,6 +113,13 @@
     <string name="fail">fail</string>
     <string name="success">success</string>
     <string name="log_wait">Creating report, please wait...</string>
+    <string name="open_as">open as</string>
+    <string name="open_explorer">open explorer</string>
+    <string name="exit">exit</string>
+    <!--<string name="text">text</string>-->
+    <!--<string name="audio">audio</string>-->
+    <!--<string name="video">video</string>-->
+    <!--<string name="picture">picture</string>-->
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
     <!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
