--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -5,14 +5,14 @@
     <string name="navigation_drawer_close">关闭导航抽屉</string>
     <string name="action_settings">设置</string>
     <string name="ums_device_tip">数据源(选择块设备或镜像文件)</string>
-    <string name="ums_config_path_tip">配置目录(选择配置基于的目录)</string>
+    <string name="ums_config_path_tip">自定义配置目录</string>
     <string name="ums_edit_hint">输入或点击按钮以选择</string>
     <string name="ums_select_btn_tip">选择</string>
     <string name="ums_history_btn_tip">历史</string>
     <string name="ums_search_btn_tip">搜索</string>
     <string name="ums_readonly_check_tip">只读</string>
     <string name="ums_config_btn_tip">启动U盘</string>
-    <string name="mount_target_edit_tip">挂载点(要挂载到的目录)</string>
+    <string name="mount_target_edit_tip">挂载点(不要选/sdcard/...)</string>
     <string name="mount_loop_check_tip">loop</string>
     <string name="mount_mount_tip">挂载</string>
     <string name="explorer_sort_way">排序方式</string>
@@ -70,7 +70,7 @@
     <string name="user">用户</string>
     <string name="group">组</string>
     <string name="other">其他</string>
-    <string name="permission_tip"><![CDATA[权限掩码(用于vfat)]]></string>
+    <string name="permission_tip"><![CDATA[权限掩码(用于vfat,需关 挂载命名空间分离)]]></string>
     <string name="mount_namespace_tip">if \'mount namespace separation\' in SuperSu is checked,this function may be impeded</string>
     <string name="charset_tip">消除乱码</string>
     <string name="status">状态</string>
@@ -120,6 +120,8 @@
     <string name="exit">退出</string>
     <string name="ums_explorer">UMS文件浏览</string>
     <string name="see">查看</string>
+    <string name="init_fail">初始化失败!</string>
+    <string name="alloc">分配</string>
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
 	<!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
