--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -70,8 +70,8 @@
     <string name="user">用户</string>
     <string name="group">组</string>
     <string name="other">其他</string>
-    <string name="permission_tip"><![CDATA[权限掩码(用于vfat,需关 挂载命名空间分离)]]></string>
-    <string name="mount_namespace_tip">if \'mount namespace separation\' in SuperSu is checked,this function may be impeded</string>
+    <string name="permission_tip"><![CDATA[权限掩码]]></string>
+    <string name="mount_namespace_tip">确保\'挂载命名空间分离\'已关闭</string>
     <string name="charset_tip">消除乱码</string>
     <string name="status">状态</string>
     <string name="umsdev">这是一个块设备,请谨慎操作,防止数据丢失!</string>
@@ -122,6 +122,8 @@
     <string name="see">查看</string>
     <string name="init_fail">初始化失败!</string>
     <string name="alloc">分配</string>
+    <string name="error">错误</string>
+    <string name="no_root_tip">获取root权限失败!</string>
     <!--<string name="help_en">*This program allows you to chose a block device or disk image as a 'disk',and communicate with PC through usb mass storage (just as usb disk do).-->
 	<!--* Since the configuration of android phones are different, you should select the correct config path firstly,you can simply press 'SEARCH' button to find the path if available ,or specify it manually-->
     <!--* Root permission is needed, if you want to use mount function, busybox is needed too.-->
